# revieu-backend

./: .gitignore  ARCHITECTURE_MIGRATION_IMPLEMENTATION.md  ARCHITECTURE_MIGRATION_PLAN.md  README.md  lefthook.yml  package-lock.json  tools.go
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  chore.yml  config.yml  docs.yml  feature-request.yml  perf.yml  refactor.yml  style.yml  test.yml
.github/workflows/: auth-service-ci.yml  auth-service-ci.yml.disabled  core-ci.yml
.prompt/: git-workflow.md
apps/auth-service/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  sample.sql
apps/auth-service/app/: __init__.py  config.py  extensions.py  main.py
apps/auth-service/app/api/: deps.py
apps/auth-service/app/api/v1/endpoints/: auth.py
apps/auth-service/app/auth/: routes.py  services.py
apps/auth-service/app/config/: __init__.py
apps/auth-service/app/core/: config.py  logger.py  security.py
apps/auth-service/app/models/: schemas.py  user.py
apps/auth-service/app/schemas/: common.py  user.py
apps/auth-service/app/services/: auth_service.py  email_service.py
apps/auth-service/doc/: API.md  Database.md
apps/auth-service/test/: db_test.py
apps/core/: .gitignore  Makefile  QUICKSTART.md  README.md  SWAGGER_SETUP.md  go.mod  go.sum  init-db.sql
apps/example-service/: README.md
docs/: database-design-v1.md  database-design-v2.md
docs/plans/: 2026-01-31-account-settings-api-design.md  2026-01-31-secrets-management-design.md  (+11 more)
scripts/: README.md  generate_db_erd_svg.py  install-hooks.sh  seal-secrets.sh  setup.sh
(+204 files in other folders)
