[project]
name = "uscre-login"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt==4.0.1",
    "cryptography>=46.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "fastapi-mail>=1.4.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.4.0",
    "structlog>=24.0.0",
    "pyjwt>=2.10.1",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "itsdangerous>=2.0.0",
]
